@@ -1,4 +1,5 @@
 SVN
+* Fixed bug #9619, script/server fails to start with [C-c C-c w s]
 * Added hotkeys for tests:
   - [C-c C-c .] running a test for current model/controller (global)
   - [C-c .] running a test for current method (in a functional/unit test)
